--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@relume_io/relume-ui": "^1.3.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.15.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
